test/deca/context/invalid/3_31_print_bool_s.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Ligne 9 : Print d'un type incompatible

{
    print(true);
}
